fixed issue where text overlapped hero

--- a/termites/assets/css/desktop-style.css
+++ b/termites/assets/css/desktop-style.css
@@ -207,8 +207,8 @@ img {
 /* Map section */
 
 #damage-cost {
-    padding: 0 30px;
-    margin: 25px 0;
+    padding: 1%;
+    /* margin: 25px 0; */
     text-align: center;
     font-size: 1.75em;
 }
